fix math on the page

--- a/source/sa_reading_group/notes/2014-09-30.html.md
+++ b/source/sa_reading_group/notes/2014-09-30.html.md
@@ -55,10 +55,10 @@ title: Sensitivity analysis in practice, chapter 1 notes
 ### Interpretation of total effect
 
 * Why is total effect necessary and sufficient but not the main effect for
-  $P_s = 0$ to not be influential
+  \\(P_s = 0\\) to not be influential
 * If all params are fixed then this one is also fixed
-* If $P_s = 0$ then there is a simpler model to express the model
-  without $P_s$
+* If \\(P_s = 0\\) then there is a simpler model to express the model
+  without \\(P_s\\)
 
 ## Finance
 
