--- a/site/templates/cv.tex
+++ b/site/templates/cv.tex
@@ -8,9 +8,11 @@
 \usepackage{hyperref}
 \usepackage{tabulary}
 \usepackage{booktabs}
-\usepackage[utf8]{inputenc}
+%\usepackage[utf8]{inputenc}
 \usepackage{titlesec}
 \usepackage{enumitem}
+\usepackage{fontspec}
+\usepackage{libertine}
 
 \usepackage{doi}
 %\usepackage{hyperref}
