--- a/site/bib/all.bib
+++ b/site/bib/all.bib
@@ -1,3 +1,22 @@
+% Encoding: UTF-8
+
+@inproceedings{Morton:2012,
+ author = {Morton, Kristi and Bunker, Ross and Mackinlay, Jock and Morton, Robert and Stolte, Chris},
+ title = {Dynamic Workload Driven Data Integration in Tableau},
+ booktitle = {Proceedings of the 2012 ACM SIGMOD International Conference on Management of Data},
+ series = {SIGMOD '12},
+ year = {2012},
+ isbn = {978-1-4503-1247-9},
+ location = {Scottsdale, Arizona, USA},
+ pages = {807--816},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2213836.2213961},
+ doi = {10.1145/2213836.2213961},
+ acmid = {2213961},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {data integration, visualization},
+} 
 
 @book{Ziegler:2012,
   title={Lectures on polytopes},
@@ -3674,7 +3693,7 @@ author = {Giuseppe Di Battista and Roberto Tamassia}
 	Journal = {IEEE Transactions on Visualization and Computer Graphics},
 	Month = jan,
 	Number = {1},
-	Pages = {611 -- 620},
+	Pages = {611--620},
 	Title = {{W}eight{L}ifter: Visual Weight Space Exploration for Multi-Criteria Decision Making},
 	Volume = {23},
 	Year = {2016},
@@ -5554,6 +5573,8 @@ author = {Giuseppe Di Battista and Roberto Tamassia}
 	Howpublished = {2015 workshop on visualization for decision making under uncertainty},
 	Title = {Decision making in uncertainty visualization},
 	Year = {2015},
+  Doi = {10.6084/m9.figshare.1585848.v1},
+  Url = {https://eprints.cs.univie.ac.at/4598/},
 	
 	
 	}
@@ -8879,10 +8900,9 @@ author = {Giuseppe Di Battista and Roberto Tamassia}
 	Publisher = {Institute of Electrical \& Electronics Engineers ({IEEE})},
 	Rating = {3},
 	Read = {1},
-	Title = {Fast Volume Reconstruction from Motion Corrupted Stacks of 2D Slices},
-	Url = {http://dx.doi.org/10.1109/tmi.2015.2415453},
+	Title = {Fast Volume Reconstruction from Motion Corrupted Stacks of {2D} Slices},
 	Year = {2015},
-	
+  Pages = {1901--1913},
 	}
 
 @article{Tinsley:2012,
@@ -13094,6 +13114,7 @@ help achieve these ends. },
 	Date-Modified = {2014-04-22 09:26:53 +0000},
 	Institution = {Simon Fraser University Computing Science Department},
 	Number = {TR-2011-01},
+  Url = {ftp://fas.sfu.ca/pub/cs/TR/2011/CMPT2011-01.pdf},
 	Title = {PReSM: Principled parameter finding for image segmentation algorithms using visual response surface exploration},
 	Year = {2011}}
 
@@ -21777,23 +21798,22 @@ Assessing the Reliability of Complex Models discusses changes in education of pr
 	
 	}
 
-@article{Filinski:2010,
-	Author = {Filinski, Andrzej},
-	Date-Added = {2012-12-23 15:54:34 +0000},
-	Date-Modified = {2013-04-07 20:00:22 +0000},
-	Doi = {10.1145/1707801.1706354},
-	Isbn = {9781605584799},
-	Journal = {ACM SIGPLAN Notices},
-	Number = {1},
-	Pages = {483},
-	Rating = {0},
-	Title = {{Monads in action}},
-	Url = {http://portal.acm.org/citation.cfm?doid=1707801.1706354},
-	Volume = {45},
-	Year = {2010},
-	
-	
-	}
+@Article{Filinski:2010,
+  author        = {Filinski, Andrzej},
+  title         = {Monads in action},
+  journal       = {ACM SIGPLAN Notices},
+  year          = {2010},
+  volume        = {45},
+  number        = {1},
+  pages         = {483},
+  date-added    = {2012-12-23 15:54:34 +0000},
+  date-modified = {2013-04-07 20:00:22 +0000},
+  doi           = {10.1145/1707801.1706354},
+  isbn          = {9781605584799},
+  rating        = {0},
+  timestamp     = {2018-02-09},
+  url           = {http://portal.acm.org/citation.cfm?doid=1707801.1706354},
+}
 
 @article{:a,
 	Date-Added = {2012-12-23 15:54:34 +0000},
@@ -24151,4 +24171,180 @@ Assessing the Reliability of Complex Models discusses changes in education of pr
 	Volume = {23},
 	Year = {2001}}
 
+@Book{Bishop:2006,
+  title     = {Pattern Recognition and Machine Learning (Information Science and Statistics)},
+  publisher = {Springer-Verlag New York, Inc.},
+  year      = {2006},
+  author    = {Bishop, Christopher M.},
+  address   = {Secaucus, NJ, USA},
+  isbn      = {0387310738},
+  timestamp = {2018-01-10},
+}
+
+@Article{Isenberg:2017,
+  author    = {Petra Isenberg and Tobias Isenberg and Michael Sedlmair and Jian Chen and Torsten M{\"o}ller},
+  title     = {Visualization as Seen Through its Research Paper Keywords},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2017},
+  volume    = {23},
+  number    = {1},
+  pages     = {771--780},
+  month     = jan,
+  doi       = {10.1109/TVCG.2016.2598827},
+  doi_url   = {https://doi.org/10.1109/TVCG.2016.2598827},
+  file      = {Isenberg_2017_VAS.pdf:https\://petra.isenberg.cc/publications/papers/Isenberg_2017_VAS.pdf:PDF},
+  timestamp = {2018-01-10},
+  url       = {https://tobias.isenberg.cc/VideosAndDemos/Isenberg2017VST},
+}
+
+@Book{Russell:2009,
+  title     = {Artificial Intelligence: A Modern Approach},
+  publisher = {Prentice Hall Press},
+  year      = {2009},
+  author    = {Russell, Stuart and Norvig, Peter},
+  address   = {Upper Saddle River, NJ, USA},
+  edition   = {3rd},
+  isbn      = {0136042597, 9780136042594},
+  timestamp = {2018-01-10},
+}
+
+@Article{Strobelt:2018,
+  author    = {Hendrik Strobelt and Sebastian Gehrmann and Hanspeter Pfister and Alexander M. Rush},
+  title     = {{LSTMVis}: A Tool for Visual Analysis of Hidden State Dynamics in Recurrent Neural Networks},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2018},
+  volume    = {24},
+  number    = {1},
+  pages     = {667-676},
+  month     = jan,
+  issn      = {1077-2626},
+  abstract  = {Recurrent neural networks, and in particular long short-term memory (LSTM) networks, are a remarkably effective tool for sequence modeling that learn a dense black-box hidden representation of their sequential input. Researchers interested in better understanding these models have studied the changes in hidden state representations over time and noticed some interpretable patterns but also significant noise. In this work, we present LSTMVis, a visual analysis tool for recurrent neural networks with a focus on understanding these hidden state dynamics. The tool allows users to select a hypothesis input range to focus on local state changes, to match these states changes to similar patterns in a large data set, and to align these results with structural annotations from their domain. We show several use cases of the tool for analyzing specific hidden state properties on dataset containing nesting, phrase structure, and chord progressions, and demonstrate how the tool can be used to isolate patterns for further statistical analysis. We characterize the domain, the different stakeholders, and their goals and tasks. Long-term usage data after putting the tool online revealed great interest in the machine learning community.},
+  doi       = {10.1109/TVCG.2017.2744158},
+  keywords  = {Computational modeling;Data models;Pattern matching;Recurrent neural networks;Tools;Visualization;LSTM;Machine Learning;Recurrent Neural Networks;Visualization},
+  timestamp = {2018-01-10},
+}
+
+@Article{Pezzotti:2018,
+  author    = {Nicola Pezzotti and Thomas H{\"o}llt and Jan van Gemert and Boudewijn Lelieveldt and Elmar Eisemann and Anna Vilanova},
+  title     = {DeepEyes: Progressive Visual Analytics for Designing Deep Neural Networks},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics (Proceedings of IEEE VAST 2017)},
+  year      = {2018},
+  volume    = {24},
+  number    = {1},
+  month     = jan,
+  doi       = {10.1109/TVCG.2017.2744358},
+  timestamp = {2018-01-10},
+}
+
+@InProceedings{Sahami:1998,
+  author        = {Sahami, Mehran and Dumais, Susan and Heckerman, David and Horvitz, Eric},
+  title         = {A Bayesian approach to filtering junk e-mail},
+  booktitle     = {Learning for Text Categorization: Papers from the 1998 workshop},
+  year          = {1998},
+  volume        = {62},
+  pages         = {98--105},
+  __markedentry = {[tom:]},
+  timestamp     = {2018-01-10},
+}
+
+@InBook{Minkowski:1908,
+  chapter   = {Space and Time},
+  pages     = {70--88},
+  title     = {The principle of relativity; original papers},
+  year      = {1908},
+  author    = {Minkowski, Hermann},
+  note      = {Translated by Meghnad Saha and Satyendranath Bose},
+  timestamp = {2018-01-26},
+}
+
+@Article{Stevens:1957,
+  author    = {Stevens, Stanley S.},
+  title     = {On the psychophysical law},
+  journal   = {Psychological review},
+  year      = {1957},
+  volume    = {64},
+  number    = {3},
+  pages     = {153--181},
+  doi       = {10.1037/h0046162},
+  timestamp = {2018-01-26},
+}
+
+@InProceedings{Sabour:2017,
+  author    = {Sabour, Sara and Frosst, Nicholas and Hinton, Geoffrey E},
+  title     = {Dynamic routing between capsules},
+  booktitle = {Advances in Neural Information Processing Systems},
+  year      = {2017},
+  pages     = {3859--3869},
+  file      = {:Sabour_2017 - Dynamic routing between capsules.pdf:PDF},
+  groups    = {Group meeting papers},
+  timestamp = {2018-01-28},
+}
+
+@Article{Kung:1975,
+  author    = {Kung, H. T. and Luccio, F. and Preparata, F. P.},
+  title     = {On Finding the Maxima of a Set of Vectors},
+  journal   = {Journal of the ACM},
+  year      = {1975},
+  volume    = {22},
+  number    = {4},
+  pages     = {469--476},
+  month     = oct,
+  timestamp = {2018-02-08},
+}
+
+@Book{Snyder:1987,
+  title     = {Map projections--A working manual},
+  publisher = {US Government Printing Office},
+  year      = {1987},
+  author    = {Snyder, John Parr},
+  timestamp = {2018-02-08},
+}
+
+@Article{McNeil:2015,
+  author        = {McNeil, Sara},
+  title         = {Visualizing mental models: understanding cognitive change to support teaching and learning of multimedia design and development},
+  journal       = {Educational Technology Research and Development},
+  year          = {2015},
+  volume        = {63},
+  number        = {1},
+  pages         = {73--96},
+  month         = {Feb},
+  issn          = {1556-6501},
+  __markedentry = {[tom:6]},
+  abstract      = {The use of advanced instructional design (ID) principles, especially those that include a collaborative authoring environment is becoming ever more critical in the successful workplace. Faculty in instructional technology programs who provide an environment that effectively nourishes these ID skills have a responsibility to continually evaluate and update their instructional methods to ensure that course goals are met. Using students' drawings of their expressed mental models as an assessment tool is one approach that helps evaluate teaching methods, determine what students have learned, and how they have conceptualized important concepts. In this study, teams of instructional technology graduate students in a two-semester, multimedia design and development course used an authoring program to create multimedia projects for real clients. This study examined the cognitive changes that occurred when these students were immersed in a technology-rich, collaborative environment. Comparison of students' visual representations of their mental models of multimedia design and development from the beginning and end of the course provided insight into conceptual changes that occurred in regards to the multimedia course, its goals, and the collaborative process. Analysis of students' drawings of their mental models indicated substantial transformations from linear, individualistic, and skills-based thinking to recursive, collaborative, and team-oriented concepts. This data provides evidence that the visual, graphic nature of mental models provides a coherent, fluid, and detailed representation of students' thinking, one that captures a level of richness that may be missing from essay methods, product assessment, or class evaluations.},
+  day           = {01},
+  doi           = {10.1007/s11423-014-9354-5},
+  timestamp     = {2018-02-09},
+  url           = {https://doi.org/10.1007/s11423-014-9354-5},
+}
+
+@Book{Palmer:1999,
+  title     = {Vision Science: Photons to Phenomenology},
+  publisher = {The MIT Press},
+  year      = {1999},
+  author    = {Stephen E. Palmer},
+  timestamp = {2018-02-11},
+}
+
+@Article{Wilkinson:2018,
+  author    = {L. Wilkinson},
+  title     = {Visualizing Big Data Outliers Through Distributed Aggregation},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2018},
+  volume    = {24},
+  number    = {1},
+  pages     = {256-266},
+  month     = {Jan},
+  issn      = {1077-2626},
+  abstract  = {Visualizing outliers in massive datasets requires statistical pre-processing in order to reduce the scale of the problem to a size amenable to rendering systems like D3, Plotly or analytic systems like R or SAS. This paper presents a new algorithm, called hdoutliers, for detecting multidimensional outliers. It is unique for a) dealing with a mixture of categorical and continuous variables, b) dealing with big-p (many columns of data), c) dealing with big-$n$ (many rows of data), d) dealing with outliers that mask other outliers, and e) dealing consistently with unidimensional and multidimensional datasets. Unlike ad hoc methods found in many machine learning papers, hdoutliers is based on a distributional model that allows outliers to be tagged with a probability. This critical feature reduces the likelihood of false discoveries.},
+  doi       = {10.1109/TVCG.2017.2744685},
+  keywords  = {Anomaly detection;Covariance matrices;Gaussian distribution;Robustness;Sociology;Standards;Anomalies;Outliers},
+  timestamp = {2018-02-13},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
+
+@Comment{jabref-meta: groupstree:
+0 AllEntriesGroup:;
+1 ExplicitGroup:Group meeting papers\;0\;;
+}
