--- a/site/templates/cv.tex
+++ b/site/templates/cv.tex
@@ -56,8 +56,10 @@
 \renewcommand*{\maketitle}{%
   %\begin{adjustwidth}{-1.8in}{}
   \begin{tabular*}{\mytitlewidth}{@{}l@{\extracolsep{\fill}}r@{\extracolsep{0ex}~}}
-  \textbf{\large{\theauthor}} &  \\ \hline
-  \multicolumn{2}{r}{\theaddress, \thephone, \theemail}
+  \textbf{\large{\theauthor}} &  \\ 
+    \hline
+    \multicolumn{2}{r}{\theaddress} \\ 
+    \multicolumn{2}{r}{\thephone, \theemail}
   \end{tabular*}
   %\end{adjustwidth}
 }
@@ -72,9 +74,9 @@
 
 %% My info
 \author{Thomas Torsney-Weir}
-\email{thomas.torsney-weir@univie.ac.at}
-\phone{+43 650/3451408}
-\address{Sensengasse 6, 1090 Wien, Austria}
+\email{t.d.torsney-weir@swansea.ac.uk}
+\phone{+44 1792 604273}
+\address{Office 416, Computational Foundry, Swansea University Bay Campus, Swansea, SA1 8EN, UK}
 
 
 
