--- a/bib/all.bib
+++ b/bib/all.bib
@@ -1,6 +1,6 @@
 
 @inproceedings{cetin_2021,
-  title = {{{CorpSum}}: Towards an {{Enabling Tool}}-{{Design}} for {{Language Researchers}} to {{Explore}}, {{Analyze}} and {{Visualize Corpora}}},
+  title = {{{CorpSum}}: {{Towards}} an {{Enabling Tool-Design}} for {{Language Researchers}} to {{Explore}}, {{Analyze}} and {{Visualize Corpora}}},
   shorttitle = {{{CorpSum}}},
   booktitle = {Proceedings of the 2021 {{CHI Conference}} on {{Human Factors}} in {{Computing Systems}}},
   author = {{\c C}etin, Asil and Moeller, Torsten and {Torsney-Weir}, Thomas},
@@ -18,7 +18,7 @@
 }
 
 @book{diehl_2021,
-  title = {{{VisGuided}}: A {{Community}}-Driven {{Approach}} for {{Education}} in {{Visualization}}},
+  title = {{{VisGuided}}: {{A Community-driven Approach}} for {{Education}} in {{Visualization}}},
   shorttitle = {{{VisGuided}}},
   author = {Diehl, Alexandra and Firat, Elif E. and {Torsney-Weir}, Thomas and {Abdul-Rahman}, Alfie and Bach, Benjamin and Laramee, Robert and Pajarola, Renato and Chen, Min},
   year = {2021},
@@ -31,6 +31,24 @@
   langid = {english},
   annotation = {Accepted: 2021-04-09T18:53:37Z},
   file = {/home/tom/Papers/papers/visguided-diehl_2021.pdf;/home/tom/Zotero/storage/7V8MKHPB/eged20211003.html}
+}
+
+@article{dykes_2022,
+  title = {Visualization for {{Epidemiological Modelling}}: {{Challenges}}, {{Solutions}}, {{Reflections}} \& {{Recommendations}}},
+  shorttitle = {Visualization for {{Epidemiological Modelling}}},
+  author = {Dykes, Jason and {Abdul-Rahman}, Alfie and Archambault, Daniel and Bach, Benjamin and Borgo, Rita and Chen, Min and Enright, Jessica and Fang, Hui and Firat, Elif E. and Freeman, Euan and Gonen, Tuna and Harris, Claire and Jianu, Radu and John, Nigel W. and Khan, Saiful and Lahiff, Andrew and Laramee, Robert S. and Matthews, Louise and Mohr, Sibylle and Nguyen, Phong H. and Rahat, Alma A. M. and Reeve, Richard and Ritsos, Panagiotis D. and Roberts, Jonathan C. and Slingsby, Aidan and Swallow, Ben and {Torsney-Weir}, Thomas and Turkay, Cagatay and Turner, Robert and Vidal, Franck P. and Wang, Qiru and Wood, Jo and Xu, Kai},
+  year = {2022},
+  month = apr,
+  journal = {arXiv:2204.06946 [cs]},
+  eprint = {2204.06946},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  doi = {10.1098/rsta.2021.0299},
+  abstract = {We report on an ongoing collaboration between epidemiological modellers and visualization researchers by documenting and reflecting upon knowledge constructs -- a series of ideas, approaches and methods taken from existing visualization research and practice -- deployed and developed to support modelling of the COVID-19 pandemic. Structured independent commentary on these efforts is synthesized through iterative reflection to develop: evidence of the effectiveness and value of visualization in this context; open problems upon which the research communities may focus; guidance for future activity of this type; and recommendations to safeguard the achievements and promote, advance, secure and prepare for future collaborations of this kind. In describing and comparing a series of related projects that were undertaken in unprecedented conditions, our hope is that this unique report, and its rich interactive supplementary materials, will guide the scientific community in embracing visualization in its observation, analysis and modelling of data as well as in disseminating findings. Equally we hope to encourage the visualization community to engage with impactful science in addressing its emerging data challenges. If we are successful, this showcase of activity may stimulate mutually beneficial engagement between communities with complementary expertise to address problems of significance in epidemiology and beyond. https://ramp-vis.github.io/RAMPVIS-PhilTransA-Supplement/},
+  archiveprefix = {arXiv},
+  copyright = {All rights reserved},
+  keywords = {Computer Science - Human-Computer Interaction},
+  file = {/home/tom/Papers/papers/visualization for epidemiological modelling-dykes_2022.pdf;/home/tom/Zotero/storage/7LJ663SS/2204.html}
 }
 
 @inproceedings{gibson_2021,
@@ -56,11 +74,12 @@
   year = {2015},
   journal = {IEEE Transactions on Medical Imaging},
   pages = {1901--1913},
-  doi = {10.1109/tmi.2015.2415453}
+  doi = {10.1109/tmi.2015.2415453},
+  file = {/home/tom/Papers/papers/fast volume reconstruction from motion corrupted stacks of 2d slices-kainz_2015.pdf}
 }
 
 @article{pajer_2016,
-  title = {{{WeightLifter}}: Visual {{Weight Space Exploration}} for {{Multi}}-{{Criteria Decision Making}}},
+  title = {{{WeightLifter}}: {{Visual Weight Space Exploration}} for {{Multi-Criteria Decision Making}}},
   author = {Pajer, Stephan and Streit, Mark and {Torsney-Weir}, Thomas and Spechtenhauser, Florian and M{\"o}ller, Torsten and Piringer, Harald},
   year = {2016},
   month = jan,
@@ -75,7 +94,7 @@
 }
 
 @article{schwarzl_2019,
-  title = {Cellpackexplorer: Interactive Model Building for Volumetric Data of Complex Cells},
+  title = {Cellpackexplorer: {{Interactive}} Model Building for Volumetric Data of Complex Cells},
   shorttitle = {Cellpackexplorer},
   author = {Schwarzl, Magdalena and Autin, Ludovic and Johnson, Graham and {Torsney-Weir}, Thomas and M{\"o}ller, Torsten},
   year = {2019},
@@ -93,7 +112,7 @@
 }
 
 @techreport{torsney-weir_2011,
-  title = {{{PReSM}}: Principled Parameter Finding for Image Segmentation Algorithms Using Visual Response Surface Exploration},
+  title = {{{PReSM}}: {{Principled}} Parameter Finding for Image Segmentation Algorithms Using Visual Response Surface Exploration},
   author = {{Torsney-Weir}, Thomas and Saad, Ahmed and M{\"o}ller, Torsten and Weber, Britta and Hege, Hans-Christian and Verbavatz, Jean-Marc},
   year = {2011},
   number = {TR-2011-01},
@@ -101,7 +120,7 @@
 }
 
 @article{torsney-weir_2011a,
-  title = {Tuner: Principled {{Parameter Finding}} for {{Image Segmentation Algorithms Using Visual Response Surface Exploration}}},
+  title = {Tuner: {{Principled Parameter Finding}} for {{Image Segmentation Algorithms Using Visual Response Surface Exploration}}},
   author = {{Torsney-Weir}, Thomas and Saad, Ahmed and M{\"o}ller, Torsten and Weber, Britta and Hege, Hans-Christian and Verbavatz, Jean-Marc and Bergner, Steven},
   year = {2011},
   month = nov,
@@ -112,14 +131,14 @@
   file = {/home/tom/Papers/papers/tuner-torsney-weir_2011.pdf}
 }
 
-@phdthesis{torsney-weir_2012,
-  type = {Master's Thesis},
+@mastersthesis{torsney-weir_2012,
   title = {Visual Analysis of High-Dimensional Parameter Spaces},
   author = {{Torsney-Weir}, Thomas},
   year = {2012},
   doi = {10.6084/m9.figshare.1005188},
   abstract = {We present a system called Tuner to systematically analyze the parameter space of com- plex computer simulations, which are time consuming to run and consequently cannot be exhaustively sampled. We begin with a sparse initial sampling of the parameter space, then use these samples to create a fast emulator of the simulation. Analyzing this emulator gives the user insight on further sampling the simulation. Tuner guides the user through sampling and provides tools to find optimal parameter settings of up to two objective functions and perform sensitivity analysis. We present use-cases from the domain of image segmentation algorithms. Since our method must utilize samples of the simulation and relies on an inherently interactive visualization method, we perform a complexity analysis to see how many sam- ples can be rendered while staying interactive. We examined how rendering performance changes with the dimensionality, reconstruction kernel size, and number of sample points. To study this, we decomposed the rendering complexity into a predictive cost function that combines the cost of filtering each data point and then the cost to draw each pixel on screen. This cost function is calibrated to the time to filter and draw for two different hardware configurations. The cost formulation is used to examine the effects on rendering time from using box filtering versus a radial distance measure in high-dimensional data spaces as used for the filtered scatterplot and HyperSlice visualization methods, respectively. We find that for a constant kernel volume, rendering performance increases with dimensionality in the HyperSlice technique while it decreases with the filtered scatterplot technique. We also find that the total number of sample points and not the size of the reconstruction kernel is a much stronger determinant of the rendering time.},
-  school = {Department of Computing Science, Simon Fraser University}
+  school = {Department of Computing Science, Simon Fraser University},
+  file = {/home/tom/Papers/papers/visual analysis of high-dimensional parameter spaces-torsney-weir_2012.pdf}
 }
 
 @book{torsney-weir_2015,
@@ -157,7 +176,7 @@
 }
 
 @article{torsney-weir_2018,
-  title = {Hypersliceplorer: Interactive Visualization of Shapes in Multiple Dimensions},
+  title = {Hypersliceplorer: {{Interactive}} Visualization of Shapes in Multiple Dimensions},
   author = {{Torsney-Weir}, Thomas and M{\"o}ller, Torsten and Sedlmair, Michael and Kirby, R. Mike},
   year = {2018},
   journal = {Computer Graphics Forum},
@@ -169,7 +188,7 @@
 }
 
 @inproceedings{torsney-weir_2018a,
-  title = {Risk Fixers and Sweet Spotters: A Study of the Different Approaches to Using Visual Sensitivity Analysis in an Investment Scenario},
+  title = {Risk Fixers and Sweet Spotters: {{A}} Study of the Different Approaches to Using Visual Sensitivity Analysis in an Investment Scenario},
   booktitle = {{{EuroVis}} 2018 - {{Short Papers}}},
   author = {{Torsney-Weir}, Thomas and Afroozeh, Shahrzad and Sedlmair, Michael and M{\"o}ller, Torsten},
   year = {2018},
@@ -179,7 +198,6 @@
 }
 
 @phdthesis{torsney-weir_2018b,
-  type = {{{PhD Thesis}}},
   title = {Slicing Multi-Dimensional Spaces},
   author = {{Torsney-Weir}, Thomas},
   year = {2018},
