update latex cv address

--- a/templates/cv.tex
+++ b/templates/cv.tex
@@ -72,9 +72,9 @@
 
 %% My info
 \author{Thomas Torsney-Weir}
-\email{t.d.torsney-weir@swansea.ac.uk}
-\phone{+44 1792 604273}
-\address{Office 416, Computational Foundry, Swansea University Bay Campus, Swansea, SA1 8EN, UK}
+\email{torsneyt@gmail.com}
+\phone{+43 (0)676 5579264}
+\address{Koloniestrasse 35/5/12, 1210 Wien, Austria}
 
 
 
