--- a/bib/all.bib
+++ b/bib/all.bib
@@ -1,4 +1,21 @@
 
+@article{rydow_2022,
+  title={Development and evaluation of two approaches of visual sensitivity analysis to support epidemiological modeling},
+  author={Rydow, Erik and Borgo, Rita and Fang, Hui and Torsney-Weir, Thomas and Swallow, Ben and Porphyre, Thibaud and Turkay, Cagatay and Chen, Min},
+  journal={IEEE Transactions on Visualization and Computer Graphics},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{dunne_2022,
+  title={Complex model calibration through emulation, a worked example for a stochastic epidemic model},
+  author={Dunne, Michael and Mohammadi, Hossein and Challenor, Peter and Borgo, Rita and Porphyre, Thibaud and Vernon, Ian and Firat, Elif E and Turkay, Cagatay and Torsney-Weir, Thomas and Goldstein, Michael and others},
+  journal={Epidemics},
+  pages={100574},
+  year={2022},
+  publisher={Elsevier}
+}
+
 @inproceedings{cetin_2021,
   title = {{{CorpSum}}: {{Towards}} an {{Enabling Tool-Design}} for {{Language Researchers}} to {{Explore}}, {{Analyze}} and {{Visualize Corpora}}},
   shorttitle = {{{CorpSum}}},
