cv: remove old address

--- a/templates/cv.tex
+++ b/templates/cv.tex
@@ -74,7 +74,7 @@
 \author{Thomas Torsney-Weir}
 \email{torsneyt@gmail.com}
 \phone{+43 (0)676 5579264}
-\address{Koloniestrasse 35/5/12, 1210 Wien, Austria}
+%\address{Koloniestrasse 35/5/12, 1210 Wien, Austria}
 
 
 
